assets/css/style.css
/*google font imports*/
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;900;1,100;900&family=Open+Sans:ital,wght@0,300;800;1,300;800&display=swap');

/*font style*/
/*<uniquifier>: Use a unique and descriptive class name
// <weight>: Use a value from 300 to 800*/
.open-sans {
    font-family: "Open Sans", sans-serif;
    font-weight: 600;
    font-style: normal;
}

.montserrat {
    font-family: "Montserrat", sans-serif;
    font-weight: 600;
    font-style: normal;
    font-size: large;
}

/*Asterick wildcard selector used to overide styles added by default by the browser*/
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/*general styles*/
body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    /*generic project styles*/
    color: rgb(0, 84, 147);
    font-family: 'Montserrat', 'Open-Sans', sans-serif;
}

h1,
h2 {
    font-family: 'Open-Sans', 'Montserrat', sans-serif;
    color: whitesmoke;
    font-size: large;
    text-transform: uppercase;
    letter-spacing: 2px;
}

h3 {
    font-family: 'Open-Sans', 'Montserrat', sans-serif;
    color: #808080;
    font-size: large;
    text-transform: uppercase;
    letter-spacing: 2px;
}

.hidden-heading {
    display: none;
}

/*header*/
header {
    background-color: rgb(0, 84, 147);
    padding: 0 0.5rem;
    color: whitesmoke;
    position: fixed;
    z-index: 99;
    width: 100%;
    box-shadow: 0 2px #808080;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

header a {
    text-decoration: none;
    text-transform: uppercase;
    letter-spacing: 2px;
    color: whitesmoke;
}

#menu {
    font-size: 110%;
    list-style-type: none;
    letter-spacing: 4px;
}

#menu>li {
    margin-bottom: 1em;
}

.active {
    border-bottom: 1px solid #808080;
}

/*navbar styles with dropdown menu*/
nav {
    position: absolute;
    background-color: rgb(0, 84, 147);
    color: whitesmoke;
    width: 100%;
    left: 0;
    box-shadow: 0 2px #808080;
    padding: 10px 1rem;
    display: none;
    /*list items remain hidden until user clicks to open*/
    top: 100%;
}

/*nav toggle*/
#nav-toggle:checked~nav {
    display: block;
}

#nav-toggle {
    display: none;
    /*hides check box*/
}

#logo {
    padding-right: 4px;
}

.nav-toggle-label {
    font-size: 1.5rem;
    padding-right: 1em;
}

/*main*/
main {
    /*make main element take up extra surplus space to push footer down*/
    flex: 1 0 auto;
    margin-top: 40px;
}

#audio {
    margin-top: 100%;
}

/*hero section*/
#hero {
    height: 100vh;
    width: 100%;
    background-color: green;
    /*to text if pic not showing that code is correct*/
    background: url("../images/compressed-hero.jpg") no-repeat center center/cover;
    position: relative;
}

#cover-text {
    /*final rgba value sets the opacity so it is semi transparent*/
    background-color: rgba(0, 84, 147, 0.6);
    font-size: 130%;
    position: absolute;
    bottom: 0px;
    width: 75%;
    min-height: 30px;
    padding-top: 10px;
    padding-left: 10px;
}

#cover-text>h2,
#cover-text>h3 {
    color: whitesmoke;
}

#reasons {
    width: 90%;
    margin: 20px auto;
}

.reasons {
    margin-bottom: 20px;
    text-align: center;
    font-size: x-large;
    color: rgb(0, 84, 147);
}

#benefits h3 {
    color: rgb(0, 84, 147);
}

#benefits-physical,
#benefits-experince-sustainability {
    line-height: 20px;
    margin-bottom: 20px;
}

hr {
    border-top: 1px solid #808080;
    margin: 5px 0;
}

p {
    padding-left: 20px;
    padding-right: 20px;
    padding-bottom: 20px;
}

#circular-cover-background {
    background-color: rgb(0, 84, 147);
    width: 90vw;
    height: 90vh;
    border-radius: 50%;
    margin-bottom: 20px;
    max-width: 300px;
    max-width: 300px;
}


#farm-video {
    display: flex;
    align-items: center;
    justify-content: center;
}

/*servings and offerings section*/
#offerings {
    background: url(../images/panoramicLoughFoyle-1-1024x480-1.jpeg) no-repeat center / cover;
}

#servings-offerings div {
    color: #fafafa;
    background-color: rgba(0, 0, 0, 0.1);
    padding: 15px;
    text-align: center;
    display: flex;
    /* flex: 0 0 33.33%*/
    flex-basis: 200px;
    flex-grow: 1;
    /*creates a grid over the background image*/
    border: 2px solid whitesmoke;
}

#servings-offerings {
    display: flex;
    /*handle responsitivity without the need for a media query*/
    flex-wrap: wrap;
}

/* overides the general settings for the H3 elements in servings-offerings*/
#offerings h3 {
    color: whitesmoke;
}

#offerings h2 {
    color: whitesmoke;
    font-size: 30px;
}

#about-us {
    width: 90%;
    margin: 20px auto;
    margin-top: 10%;
}

.about-us {
    margin-bottom: 20px;
    text-align: center;
    font-size: x-large;
    color: rgb(0, 84, 147);
}

#who-are-we h3 {
    color: rgb(0, 84, 147);
}

#oyster-reel {
    display: flex;
    align-items: center;
    justify-content: center;
}

.centered-image {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
}

.centered-image img {
    width: 70%;
    height: 70%;
    object-fit: cover;
}


/*Gallery page*/
#photos img {
    width: 100%;
    line-height: 1em;
    /*allows the alternate text to stay readable even with space removed between pics*/
}

#photos {
    line-height: 0;
}

/*Enquiries*/
.flex-enquires {
    display: flex;
    justify-content: space-between;
    padding: 20px;
    width: 100%;
    max-width: 1200px;
    align-items: baseline;
}

#contact-background {
    background-color: #808080;
    padding: 20px;
    background-image: url("../images/lough-foyle-catchment.png");
    background-size: cover;
    background-position: 75%;
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
    margin-right: 0;
    margin-top: 0%;
}

/*contact form*/
#contact {
    flex: 1;
    max-width: 100%;
    overflow-x: hidden;
    padding: 20px;
}

form {
    color: whitesmoke;
    margin-top: 40px;
    width: 100%;
    padding: 20px;
    border: 2px solid #666;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
    /*adds a subtle shadow*/
    border-radius: 10px;
    display: grid;
    grid-template-columns: 1fr 2fr;
    grid-gap: 20px;
    background-color: rgba(0, 0, 0, 0.2);
}

form h2 {
    text-align: center;
}

label {
    grid-column: 1 / 2;
    text-align: left;
    padding-right: 5px;
    color: whitesmoke;
    font-size: 16px;
    font-weight: bold;
}

#message {
    grid-column: 2 / 3;
    height: 150px;
    color: #666;
    padding: 10%;
    border: 1px solid #666;
    /* match the border color */
    border-radius: 5px;
    resize: vertical;
    /*allow for vertical resizing*/
    align-items: center;
}

input {
    grid-column: 2 / 3;
}

input[type="text"],
input[type="email"],
input[type="number"] {
    color: #666;
    /*match text color to border to stand out*/
    border: 1px solid #666;
    /* match the border color */
    border-radius: 5px;
    /* match the border radius */
    width: 100%;
    padding: 10px;
}

input[type="summit"] {
    color: whitesmoke;
    /* match the text color */
    background-color: #666;
    padding: 10px;
    border: 1px solid #666;
    /* match the border color */
    border-radius: 5px;
    cursor: pointer;
}

/*google maps location*/
#location-map {
    flex: 1;
    justify-self: flex-end;
    max-width: 100%;
    overflow-x: hidden;
    padding: 20px;
    margin-left: 60px;
}

/*Footer*/
footer {
    background-color: rgb(0, 84, 147);
    color: whitesmoke;
}


#social-networks {
    text-align: center;
    padding: 20px 0;
    display: flex;
    justify-content: space-evenly;
    list-style-type: none;
}

#social-networks i {
    font-size: 160%;
    padding: 5%;
    color: whitesmoke;
}

@media screen and (max-width: 335px) {
    #message {
        width: 170px;
    }
}

@media screen and (max-width: 426px) {
    form {
        width: 100%;
        display: block;
        grid-template-columns: 0;
        grid-gap: 0;
    }

    #message {
        width: 260px;
    }

    #contact-background {
        margin-top: -10%;
    }
}

/*media query for large or landscape phones (576px and up)*/
@media screen and (min-width: 576px) {
    #photos {
        column-count: 2;
        column-gap: 0;
    }
}

@media screen and (max-width: 767px) {
    .flex-enquires {
        flex-direction: column;
    }

    #contact-background {
        margin-top: 0%;
    }

}

@media screen and (min-width: 768px) {

    /*header*/

    nav {
        display: block;
        position: relative;
        box-shadow: none;
        width: fit-content;
        padding-right: 2rem;
        height: 130px;
    }

    #menu {
        display: flex;
        background-color: rgb(0, 84, 147);
    }

    #menu>li {
        padding-left: 1rem;
        color: whitesmoke;
    }

    .nav-toggle-label {
        display: none;
    }

    #logo {
        font-size: x-large;
        /* line-height: 75px;
        margin: 0 0.5rem;*/
    }

    /*main content*/
    main {
        margin-top: 130px;
    }

    /*Hero*/
    #cover-text {
        width: 500px;
        right: 20px;
    }

    /*benefits section*/
    #benefits-Physical,
    #benefits-experince-sustainability {
        display: flex;
        flex-direction: column;
        width: 100%;
    }

    #benefits-Physical>div,
    #benefits-experince-sustainability>div {
        width: 75%;
    }

    #benefits-experince-sustainability>div {
        text-align: end;
        align-self: flex-end;
    }

    /*enquires page*/
    #contact-background {
        margin-top: 80px;
        margin-bottom: 0px;
        display: inline-block;
    }

    #contact,
    #location-map {
        flex-basis: auto;
        width: 100%;
    }

    /*Gallery*/
    #photos {
        column-count: 3;
    }

    /*makes picture bigger in larger screen sizes*/
    #servings-offerings {
        height: 250px;
    }
}

/*laptops and pc 992px plus*/
@media screen and (min-width: 992px) {
    #menu a:hover {
        border-bottom: 1px solid rgb(112, 128, 144);
    }

    /*Gallery*/
    #photos {
        column-count: 4;
        object-fit: cover;
    }

}

/* media query to fix header for displays over 1000px */
@media screen and (min-width: 1000px) {
    #header {
        width: 92.5px;
    }
}


@media screen and (max-width: 1024px) {
    .flex-enquires {
        flex-wrap: wrap;
    }

    form {
        width: 80%;
    }

}

@media screen and (min-width: 1025px){
    #location-map {
        margin-left: 150px;
    }

}


/*media query for screens 1200px*/
@media screen and (min-width: 1200px) {
    #benefits {
        display: flex;
        flex-direction: row;
    }

    #benefits>div {
        flex: 1;
    }

    #enquiries-nav {
        width: 40%;
    }

    #farm-video {
        order: 0;
    }

    #benefits-experince-sustainability {
        order: 1;
    }

    #benefits-experince-sustainability>div {
        align-self: flex-start;
    }

    #benefits-Physical>div {
        align-self: flex-end;
    }

    /*main content*/
    main {
        margin-top: 75px;
    }

}

